add Makefile, add comments to functions

--- a/.env.example
+++ b/.env.example
@@ -2,13 +2,15 @@ API_KEY=YourAPIKeyFromCryptocompare.com
 AVAILABLE_FSYMS='BTC, XRP, ETH, BCH, EOS, LTC, XMR, DASH'
 AVAILABLE_TSYMS='USD, EUR, GBP, JPY, RUR'
 
+APP_PORT=8900
+
 MYSQL_USER=root
 MYSQL_PASSWORD=password
 MYSQL_ROOT_PASSWORD=password
 MYSQL_HOST=db
 MYSQL_PORT=3306
 MYSQL_DB=currency
-MYSQL_PORT_IN_DOCKER='3306:3306'
+MYSQL_PORT_IN_DOCKER='52000:3306'
 
 #Default - every minute
 CRONTAB_FOR_SCRAPPING='* * * * *'
